<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.LoadingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/loading_title"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="26sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="16dp"
                    android:lineSpacingExtra="8dp"
                    android:text="@string/loading_subtitle"
                    android:textAlignment="center"
                    android:textColor="@color/darkGrey"
                    android:textSize="12sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/start_btn"
                    style="@android:style/Widget.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="32dp"
                    android:background="@drawable/green_btn_background"
                    android:text="@string/let_s_get_start"
                    android:textColor="@color/white"
                    android:textSize="18sp" />


<!--                <com.airbnb.lottie.LottieAnimationView-->
<!--                    android:id="@+id/animation_view"-->
<!--                    android:layout_width="250dp"-->
<!--                    android:layout_height="250dp"-->
<!--                    app:lottie_autoPlay="true"-->
<!--                    app:lottie_loop="true"-->

<!--                    tools:layout_gravity="center" />-->

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>